[project]
name = "marketlead-backend"
version = "0.1.0"
description = "MarketLead AI Backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "redis",
    "aio-pika",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
